/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.api.model;

option java_package = "com.google.devtools.mobileharness.api.model.proto";
option java_outer_classname = "Lab";

// Port types of a lab.
enum PortType {
  reserved 2, 3;
  LAB_SERVER_RPC = 0;     // Lab server Stubby port.
  LAB_SERVER_SOCKET = 1;  // Lab server Socket port.
  LAB_SERVER_HTTP = 4;    // Lab server HTTP port.
  LAB_SERVER_GRPC = 5;    // Lab server gRPC port.
}

// Lab port type and number.
message LabPort {
  PortType type = 1;  // Required.
  int32 num = 2;      // Required.
}

// Lab address and port information.
message LabLocator {
  string ip = 1;              // Required.
  string host_name = 2;       // Required.
  repeated LabPort port = 3;  // Lab port information.
}

// Lab Server setting.
message LabServerSetting {
  repeated LabPort port = 1;  // Lab port information.
}

// The host property.
message HostProperty {
  string key = 1;
  string value = 2;
}

// The List of host properties.
message HostProperties {
  repeated HostProperty host_property = 1;
}

// Lab Server feature.
message LabServerFeature {
  // The host properties of the lab server.
  HostProperties host_properties = 2;
  reserved 1;
}

// Status of a lab
enum LabStatus {
  LAB_STATUS_UNSPECIFIED = 0;
  LAB_RUNNING = 1;
  LAB_MISSING = 2;
}
